// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EvoconVTableHeaderCell > renders correctly 1`] = `
<th
  class="fixed d-none sortable cursor-pointer px-2 header-cell position-sticky"
  data-v-d8729fe2=""
>
  <div
    class="v-row v-row--density-default flex-nowrap justify-center align-center"
    data-v-d8729fe2=""
  >
    <div
      class="v-col flex-grow-1 flex-shrink-0 text-secondary-text"
      data-v-d8729fe2=""
    >
      <div
        class="d-inline-flex align-center fill-height"
        data-v-d8729fe2=""
      >
        <!--v-if-->
        <!--v-if-->
        <span
          class="header-text"
          data-v-d8729fe2=""
        />
        <!--v-if-->
        <!--v-if-->
        
        
        <!-- Clickable icon (MDI or image) -->
        
        <!-- Static MDI icon (existing) -->
        <i
          aria-describedby="v-tooltip-v-0"
          aria-hidden="false"
          class="v-icon notranslate v-theme--light text-icon-default v-icon--clickable cursor-default ml-1"
          data-v-c9a9e819=""
          id="icon"
          role="button"
          style="font-size: 14px; height: 14px; width: 14px;"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="v-icon__svg"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
        </i>
        
        
        <!--teleport start-->
        <!--teleport end-->
        
      </div>
    </div>
    <div
      class="v-col flex-shrink-1 flex-grow-0 pa-0"
      data-v-d8729fe2=""
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text-grey ml-1 sort-arrow"
        data-v-d8729fe2=""
        style="font-size: 16px; height: 16px; width: 16px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13,20H11V8L5.5,13.5L4.08,12.08L12,4.16L19.92,12.08L18.5,13.5L13,8V20Z"
          />
        </svg>
      </i>
    </div>
  </div>
</th>
`;

exports[`EvoconVTableHeaderCell > renders correctly with append icon 1`] = `
<th
  class="fixed d-none sortable cursor-pointer px-2 header-cell position-sticky"
  data-v-d8729fe2=""
>
  <div
    class="v-row v-row--density-default flex-nowrap justify-center align-center"
    data-v-d8729fe2=""
  >
    <div
      class="v-col flex-grow-1 flex-shrink-0 text-secondary-text"
      data-v-d8729fe2=""
    >
      <div
        class="d-inline-flex align-center fill-height"
        data-v-d8729fe2=""
      >
        <!--v-if-->
        <!--v-if-->
        <span
          class="header-text"
          data-v-d8729fe2=""
        >
          this is header text
        </span>
        <!--v-if-->
        <i
          aria-hidden="true"
          class="v-icon notranslate v-theme--light text-primary ml-1 mt-n1"
          data-v-d8729fe2=""
          style="font-size: 8px; height: 8px; width: 8px;"
        >
          <svg
            aria-hidden="true"
            class="v-icon__svg"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20.59 14.84L21.75 16.25L17 21L14.25 18L15.41 16.84L17 18.43L20.59 14.84M19.07 4.93L17.66 6.34C19.11 7.78 20 9.79 20 12V12.34C20.68 12.59 21.33 12.96 21.88 13.43C21.95 12.96 22 12.5 22 12C22 9.24 20.88 6.74 19.07 4.93M15.96 12.36C16.6 12.13 17.28 12 18 12C18 10.35 17.33 8.85 16.24 7.76L14.83 9.17C15.55 9.89 16 10.89 16 12C16 12.12 15.97 12.24 15.96 12.36M12 10C10.9 10 10 10.9 10 12S10.9 14 12 14 14 13.1 14 12 13.1 10 12 10M6.34 6.34L4.93 4.93C3.12 6.74 2 9.24 2 12S3.12 17.26 4.93 19.07L6.34 17.66C4.89 16.22 4 14.22 4 12C4 9.79 4.89 7.78 6.34 6.34M7.76 7.76C6.67 8.85 6 10.35 6 12S6.67 15.15 7.76 16.24L9.17 14.83C8.45 14.11 8 13.11 8 12S8.45 9.89 9.17 9.17L7.76 7.76Z"
            />
          </svg>
        </i>
        
        
        <!-- Clickable icon (MDI or image) -->
        
        <!-- Static MDI icon (existing) -->
        <i
          aria-describedby="v-tooltip-v-0"
          aria-hidden="false"
          class="v-icon notranslate v-theme--light text-icon-default v-icon--clickable cursor-default ml-1"
          data-v-c9a9e819=""
          id="icon"
          role="button"
          style="font-size: 14px; height: 14px; width: 14px;"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="v-icon__svg"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
        </i>
        
        
        <!--teleport start-->
        <!--teleport end-->
        
      </div>
    </div>
    <div
      class="v-col flex-shrink-1 flex-grow-0 pa-0"
      data-v-d8729fe2=""
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text-grey ml-1 sort-arrow"
        data-v-d8729fe2=""
        style="font-size: 16px; height: 16px; width: 16px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13,20H11V8L5.5,13.5L4.08,12.08L12,4.16L19.92,12.08L18.5,13.5L13,8V20Z"
          />
        </svg>
      </i>
    </div>
  </div>
</th>
`;

exports[`EvoconVTableHeaderCell > renders correctly with append text 1`] = `
<th
  class="fixed d-none sortable cursor-pointer px-2 header-cell position-sticky"
  data-v-d8729fe2=""
>
  <div
    class="v-row v-row--density-default flex-nowrap justify-center align-center"
    data-v-d8729fe2=""
  >
    <div
      class="v-col flex-grow-1 flex-shrink-0 text-secondary-text"
      data-v-d8729fe2=""
    >
      <div
        class="d-inline-flex align-center fill-height"
        data-v-d8729fe2=""
      >
        <!--v-if-->
        <!--v-if-->
        <span
          class="header-text"
          data-v-d8729fe2=""
        >
          mainText
        </span>
        <span
          class="header-append-text ml-1"
          data-v-d8729fe2=""
        >
          appendText
        </span>
        <!--v-if-->
        
        
        <!-- Clickable icon (MDI or image) -->
        
        <!-- Static MDI icon (existing) -->
        <i
          aria-describedby="v-tooltip-v-0"
          aria-hidden="false"
          class="v-icon notranslate v-theme--light text-icon-default v-icon--clickable cursor-default ml-1"
          data-v-c9a9e819=""
          id="icon"
          role="button"
          style="font-size: 14px; height: 14px; width: 14px;"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="v-icon__svg"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
        </i>
        
        
        <!--teleport start-->
        <!--teleport end-->
        
      </div>
    </div>
    <div
      class="v-col flex-shrink-1 flex-grow-0 pa-0"
      data-v-d8729fe2=""
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text-grey ml-1 sort-arrow"
        data-v-d8729fe2=""
        style="font-size: 16px; height: 16px; width: 16px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13,20H11V8L5.5,13.5L4.08,12.08L12,4.16L19.92,12.08L18.5,13.5L13,8V20Z"
          />
        </svg>
      </i>
    </div>
  </div>
</th>
`;
